syntax = "proto3";

option java_package = "com.example.com";
option java_outer_classname = "topicMessage";

package topic_message;

service BlockchainTopicService {
  rpc SubmitTopic(TopicRequest) returns (TopicResponse);
}

message TopicRequest {
  string topic = 1;
  int64 duration = 2;
}

message TopicResponse {
  string status = 1;
  string message = 2;
  bool success = 3;
}